--- a/app/templates/partials/task.jade.erb
+++ b/app/templates/partials/task.jade.erb
@@ -29,7 +29,7 @@
         a(href= self.project.project_url)= self.project.name
       &rarr;
     span.task_list_name
-      a(href= self.task_list_url)= self.task_list.name
+      a(href= '#!' + self.task_list.publicUrl())= self.task_list.get('name')
 
 .clear
 
