Using absolute urls in sass files

--- a/app/styles/_buttons.sass
+++ b/app/styles/_buttons.sass
@@ -60,7 +60,7 @@ a.add_button, a.new_task_list_link
 
 .button_gray
   font-size: 11px
-  background: url(img_3_2/sprite_btn.png) -126px -112px no-repeat
+  background: url(/img_3_2/sprite_btn.png) -126px -112px no-repeat
   display: block
   float: left
   height: 28px
@@ -68,7 +68,7 @@ a.add_button, a.new_task_list_link
   text-shadow: rgba(255, 255, 255, 0.7) 1px 1px 0px
   color: $clr_gray_80
   span
-    background: transparent url(img_3_2/sprite_btn.png) top right no-repeat
+    background: transparent url(/img_3_2/sprite_btn.png) top right no-repeat
     background-position-y: -112px
     display: block
     float: left
@@ -88,7 +88,7 @@ a.add_button, a.new_task_list_link
 
 .button_blue
   font-size: 11px
-  background: url(img_3_2/sprite_btn.png) -126px -168px no-repeat
+  background: url(/img_3_2/sprite_btn.png) -126px -168px no-repeat
   display: block
   float: left
   height: 28px
@@ -96,7 +96,7 @@ a.add_button, a.new_task_list_link
   text-shadow: rgba(255, 255, 255, 0.7) 1px 1px 0px
   color: $clr_gray_80
   span
-    background: transparent url(img_3_2/sprite_btn.png) top right no-repeat
+    background: transparent url(/img_3_2/sprite_btn.png) top right no-repeat
     background-position-y: -168px
     display: block
     float: left
