--- a/app/styles/_comments.sass
+++ b/app/styles/_comments.sass
@@ -18,7 +18,7 @@ span.comments_count
   padding-bottom: 3px
   margin-bottom: 10px
   .marco_avatar
-    background: url(img_3_2/sprite_base.png) 0px -36px no-repeat
+    background: url(/img_3_2/sprite_base.png) 0px -36px no-repeat
     height: 30px
     width: 35px
     margin:
@@ -87,7 +87,7 @@ span.comments_count
           height: 28px
           min-width: 31px
           padding: 0
-          background: url(img_3_2/sprite_btn.png) no-repeat 0px -56px
+          background: url(/img_3_2/sprite_btn.png) no-repeat 0px -56px
         a:active
           background-position-y: -84px
         a.btn_doc
@@ -120,7 +120,7 @@ span.comments_count
         height: 28px
         min-width: 31px
         padding: 0
-        background: url(img_3_2/sprite_btn.png) no-repeat 0px -56px
+        background: url(/img_3_2/sprite_btn.png) no-repeat 0px -56px
       a:active
         background-position-y: -84px
       a.btn_doc
@@ -240,7 +240,7 @@ form .upload_area
   padding: 5px 0
   min-height: 24px
   position: relative
-  background: url(img_3_2/sprite_h.png) -380px bottom no-repeat
+  background: url(/img_3_2/sprite_h.png) -380px bottom no-repeat
 //separador aqui
   p.actions
     visibility: hidden
@@ -331,7 +331,7 @@ form .upload_area
     clear: none
     width: 62px
     height: 55px
-    background: url(img_3_2/sprite_base.png) 0 -66px
+    background: url(/img_3_2/sprite_base.png) 0 -66px
     span
       width: 49px
       height: 49px
@@ -410,7 +410,7 @@ form .upload_area
       margin-left: -2px
       height: 28px
       width: 31px
-      background: url(img_3_2/sprite_btn.png) no-repeat -62px 0px
+      background: url(/img_3_2/sprite_btn.png) no-repeat -62px 0px
       z-index: 9998
       position: relative
     &:hover
