--- a/app/styles/_forms.sass
+++ b/app/styles/_forms.sass
@@ -105,7 +105,7 @@ $dropdown_width: 140px
   
   .selected_item
     z-index: 9500
-    background: url(img_3_2/sprite_btn.png) -126px 0 no-repeat
+    background: url(/img_3_2/sprite_btn.png) -126px 0 no-repeat
     display: block
     float: left
     clear: none
@@ -128,7 +128,7 @@ $dropdown_width: 140px
     clear: none
     width: 32px
     height: 28px
-    background: url(img_3_2/sprite_btn.png) -474px 0 no-repeat
+    background: url(/img_3_2/sprite_btn.png) -474px 0 no-repeat
     margin: 0
   
   ol
@@ -187,9 +187,9 @@ $dropdown_width: 140px
         background-color: $clr_gray_10
   &:hover
     .selected_item 
-      background: url(img_3_2/sprite_btn.png) -126px -28px no-repeat
+      background: url(/img_3_2/sprite_btn.png) -126px -28px no-repeat
     .dropdown_arrow
-      background: url(img_3_2/sprite_btn.png) -474px -28px no-repeat
+      background: url(/img_3_2/sprite_btn.png) -474px -28px no-repeat
     ol
       display: block
       
