--- a/app/styles/_header.sass
+++ b/app/styles/_header.sass
@@ -23,7 +23,7 @@ div.header
       right: 18px
       top: 11px
     float: left
-    background: url(img_3_2/sprite_v.png) top right no-repeat
+    background: url(/img_3_2/sprite_v.png) top right no-repeat
     a
       display: block
       width: 134px
@@ -41,7 +41,7 @@ div.header
     text-shadow: rgba(255, 255, 255, 0.7) 1px 1px 0px
     
     h2
-      background: url(img_3_2/sprite_btn.png) -126px 0 no-repeat
+      background: url(/img_3_2/sprite_btn.png) -126px 0 no-repeat
       display: block
       float: left
       clear: none
@@ -64,7 +64,7 @@ div.header
       clear: none
       width: 32px
       height: 28px
-      background: url(img_3_2/sprite_btn.png) -474px 0 no-repeat
+      background: url(/img_3_2/sprite_btn.png) -474px 0 no-repeat
       margin: 0
     
     ol
@@ -106,9 +106,9 @@ div.header
             text-decoration: none
     &:hover
       h2 
-        background: url(img_3_2/sprite_btn.png) -126px -28px no-repeat
+        background: url(/img_3_2/sprite_btn.png) -126px -28px no-repeat
       .dropdown_arrow
-        background: url(img_3_2/sprite_btn.png) -474px -28px no-repeat
+        background: url(/img_3_2/sprite_btn.png) -474px -28px no-repeat
       ol
         display: block
 
@@ -132,7 +132,7 @@ div.header
         height: 28px
         width: 32px
         padding: 0
-        background: url(img_3_2/sprite_btn.png) no-repeat 0px -28px
+        background: url(/img_3_2/sprite_btn.png) no-repeat 0px -28px
         &:active
           background-position: -63px -28px
         span
