--- a/app/styles/_layout.sass
+++ b/app/styles/_layout.sass
@@ -54,7 +54,7 @@ div.content_wrap
     right: 0
     overflow-y: auto
     //padding: 10px
-    background: url(img_3_2/bg_activity.gif) repeat
+    background: url(/img_3_2/bg_activity.gif) repeat
 div.aux_wrap
   width: $aux_width
   right: 0
@@ -158,11 +158,11 @@ p.flash-notice
       left: -11px
       border-right: 1px solid #DDD
   .column_wrap &
-    background: url(img_3_2/sprite_v.png) repeat-x 0px -55px
+    background: url(/img_3_2/sprite_v.png) repeat-x 0px -55px
     text-transform: uppercase
   .content_wrap &
     height: 24px
-    background: url(img_3_2/sprite_v.png) repeat-x 0px -83px
+    background: url(/img_3_2/sprite_v.png) repeat-x 0px -83px
   &.first
     background-position: 0px -56px
     height: 23px
