--- a/app/styles/_search.sass
+++ b/app/styles/_search.sass
@@ -34,7 +34,7 @@
       margin-left: -2px
       height: 28px
       width: 31px
-      background: url(img_3_2/sprite_btn.png) no-repeat
+      background: url(/img_3_2/sprite_btn.png) no-repeat
       &:active
         background-position: -31px 0px
       
