--- a/app/styles/_sidebar.sass
+++ b/app/styles/_sidebar.sass
@@ -8,7 +8,7 @@
     padding-left: 10px
     position: relative
     font-size: 11px
-    background: url(img_3_2/sprite_h.png) bottom left no-repeat
+    background: url(/img_3_2/sprite_h.png) bottom left no-repeat
     
     span
       position: absolute
@@ -49,7 +49,7 @@
   .last
     background-image: none
     &:hover
-      background: url(img_3_2/sprite_h.png) bottom left no-repeat $clr_gray_20
+      background: url(/img_3_2/sprite_h.png) bottom left no-repeat $clr_gray_20
   .btn_new_project
     padding: 0
     margin:
@@ -58,7 +58,7 @@
       bottom: 18px
     width: 165px
     height: 28px
-    background: url(img_3_2/sprite_btn.png) right -56px no-repeat
+    background: url(/img_3_2/sprite_btn.png) right -56px no-repeat
     a
       font-size: 11px
       color: red
@@ -67,7 +67,7 @@
       padding:
         top: 7px
         left: 40px
-      background: url(img_3_2/sprite_btn.png) -126px -56px no-repeat
+      background: url(/img_3_2/sprite_btn.png) -126px -56px no-repeat
       margin-left: -3px
       text-shadow: rgba(255, 255, 255, 0.7) 1px 1px 0px
     &:active
@@ -101,25 +101,25 @@
     &.add
       background-image: url(famfamfam/add.png)
     &.recent_activity
-      background-image: url(img_3_2/ico/newspaper.png)
+      background-image: url(/img_3_2/ico/newspaper.png)
     &.conversations
-      background-image: url(img_3_2/ico/balloons-box.png)
+      background-image: url(/img_3_2/ico/balloons-box.png)
     &.tasks
-      background-image: url(img_3_2/ico/tick-button-blue.png)
+      background-image: url(/img_3_2/ico/tick-button-blue.png)
     &.today
-      background-image: url(img_3_2/ico/brightness.png)
+      background-image: url(/img_3_2/ico/brightness.png)
     &.all_tasks
-      background-image: url(img_3_2/ico/ui-list-box-blue.png)
+      background-image: url(/img_3_2/ico/ui-list-box-blue.png)
     &.time
-      background-image: url(img_3_2/ico/clock-frame.png)
+      background-image: url(/img_3_2/ico/clock-frame.png)
     &.pages
-      background-image: url(img_3_2/ico/blog-blue.png)
+      background-image: url(/img_3_2/ico/blog-blue.png)
     &.files
-      background-image: url(img_3_2/ico/folder-horizontal.png)
+      background-image: url(/img_3_2/ico/folder-horizontal.png)
     &.people
-      background-image: url(img_3_2/ico/users.png)
+      background-image: url(/img_3_2/ico/users.png)
     &.chat
-      background-image: url(img_3_2/ico/keyboard.png)
+      background-image: url(/img_3_2/ico/keyboard.png)
     &.contacts
       background-image: url(famfamfam/report_user.png)
     &.recent_activities
@@ -129,15 +129,15 @@
     &.feeds
       background-image: url(famfamfam/feed.png)
     &.calendar
-      background-image: url(img_3_2/ico/calendar-blue.png)
+      background-image: url(/img_3_2/ico/calendar-blue.png)
     &.settings
-      background-image: url(img_3_2/ico/gear.png)
+      background-image: url(/img_3_2/ico/gear.png)
     &.collapsed_mode, &.expanded_mode
       background-image: url(famfamfam/layers.png)
     &.loading
       background-image: url(images/loading.gif)
     &.organizations
-      background-image: url(img_3_2/ico/building.png)
+      background-image: url(/img_3_2/ico/building.png)
     &.more
 
     &.project
