--- a/app/styles/_tasks.sass
+++ b/app/styles/_tasks.sass
@@ -167,7 +167,7 @@ form.new_task, form.edit_task, .task_list_form
       float: left
       clear: both
       text-align: center
-      background: url(img_3_2/sprite_base.png) -37px -36px no-repeat
+      background: url(/img_3_2/sprite_base.png) -37px -36px no-repeat
     .taskStatus
       //text-align: right
       float: left
@@ -245,7 +245,7 @@ form.new_task, form.edit_task, .task_list_form
         height: 25px
         width: 26px
         margin: 5px 14px 0 8px
-        background: url(img_3_2/ico/tick-gray.png) no-repeat 7px 6px
+        background: url(/img_3_2/ico/tick-gray.png) no-repeat 7px 6px
         .task_counter
           display: none
     &.status_4
@@ -273,7 +273,7 @@ form.new_task, form.edit_task, .task_list_form
         height: 25px
         width: 26px
         margin: 5px 14px 0 8px
-        background: url(img_3_2/ico/slash-gray.png) no-repeat 7px 6px
+        background: url(/img_3_2/ico/slash-gray.png) no-repeat 7px 6px
         .task_counter
           display: none
 
