--- a/app/styles/_threads.sass
+++ b/app/styles/_threads.sass
@@ -5,7 +5,7 @@
   background: #eee
   +rounded(5px)
   .thread_title
-    background: url(img_3_2/sprite_v.png) 0px -110px repeat-x #eee
+    background: url(/img_3_2/sprite_v.png) 0px -110px repeat-x #eee
     margin: 4px 0 2px
     font-size: 12px
     a
@@ -101,7 +101,7 @@
   .more_comments
     display: block
     font-size: 12px
-    background: url(img_3_2/sprite_v.png) 0 -183px $clr_gray_15
+    background: url(/img_3_2/sprite_v.png) 0 -183px $clr_gray_15
     height: 36px
     border-bottom: 1px solid $white
     &:hover
