--- a/app/templates/partials/search_bar.jade.erb
+++ b/app/templates/partials/search_bar.jade.erb
@@ -1,3 +1,3 @@
 form#search.search(accept-charset='UTF-8', action='/search', method='get')
   input#searchbox(name='q', placeholder='Search all projects', type='text', autocomplete= 'off')
-  img(src='/images/search.png')
+  a(href='/search', class='ender_btn search_btn')
