Adding markup for quick add buttons

--- a/app/views/shared/_global_navigation.haml
+++ b/app/views/shared/_global_navigation.haml
@@ -1,3 +1,10 @@
+#quick_add_buttons
+  %a{:class=>"quick_add_btn conv", :href=>"#!/conversations/new"}
+    %span New conversation
+  %a{:class=>"quick_add_btn task", :href=>"#!/tasks/new"}
+    %span New task
+  =#TODO: [MARKUP] - Add backbone views
+
 #user_utilities
   %ol.global_navigation
     /= micro_avatar(current_user)
