--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -40,7 +40,7 @@
       - if can?(:admin, project)
         .el= link_to t('.people'), project_people_path(project), :class => 'people ajax'
   - if current_user.people.any?
-    .el#projects_link= link_to t('.show_all_projects'), '#!/projects', :class => 'more'
+    -# .el#projects_link= link_to t('.show_all_projects'), '#!/projects', :class => 'more'
   - if !Teambox.config.community || (Teambox.config.community && !@community_organization) || (@community_organization && @community_role)
     .el#new_project_link= link_to t('.new_project'), new_project_path, :class => 'more ajax'
 
