Changing .people to .organizations in my organizations link in sidebar

--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -46,7 +46,7 @@
 
   .separator.with_margin More...
   -# Organizations
-  .el#my_organizations= link_to t('.organizations'), organizations_path, :class => 'people'
+  .el#my_organizations= link_to t('.organizations'), organizations_path, :class => 'organizations'
   .contained#my_organizations_list
 
   .el= link_to t('.time'), time_path, :class => 'ajax time'
