Adding arrow dropdown to actions_menu div in comments

--- a/app/templates/partials/comment.jade.erb
+++ b/app/templates/partials/comment.jade.erb
@@ -7,6 +7,7 @@
     a.micro_avatar(href= self.user_url(self.user), style= 'background: url(' + self.user.micro_avatar_url + ') no-repeat')
   .block
     .actions_menu
+      %img(src="/img_3_2/ico/arrow-dropdown.png", alt="Triangle",class="triangle")
       .actiondate
         time.timeago(data-msec= self.ms(self.updated_at), pubdate= 'true')= self.timeAgo(self.updated_at)
       img(class= 'triangle', src= '/images/triangle.png?1285939525', alt= 'Triangle')
