--- a/app/templates/partials/thread.jade.erb
+++ b/app/templates/partials/thread.jade.erb
@@ -3,7 +3,7 @@
     time.timeago(data-msec= self.ms(self.updated_at), pubdate= 'true')= self.updated_at
 
   .info
-    img(src= '/famfamfam/' + (self.is_task ? 'tick' : 'comment') + '.png', style= 'padding: 4px')
+    img(src= '/img_3_2/ico/' + (self.is_task ? 'tick-button-24' : 'balloons-box-24') + '.png', style= 'padding: 4px')
     .comment_count
       span= self.comments_count
 
