Wrapping .field.text_area a.micro_avatar with div.marco_avatar

--- a/app/templates/partials/comment_form.jade.erb
+++ b/app/templates/partials/comment_form.jade.erb
@@ -3,7 +3,8 @@
 input(name= 'utf8', type= 'hidden', value= '✓')
 
 .field.text_area
-  a.micro_avatar.my_avatar
+  .marco_avatar
+    a.micro_avatar.my_avatar
   .textarea
     textarea(cols= '40', name='comments_attributes[0][body]', placeholder= '<%= t('comments.new.task') %>', rows= '20', autocomplete= 'off')
     .autocomplete(style= 'display: none')
