--- a/app/templates/partials/comment_form.jade.erb
+++ b/app/templates/partials/comment_form.jade.erb
@@ -49,8 +49,8 @@ input(name= 'utf8', type= 'hidden', value= '✓')
           span(class= 'localized_date')
             i <%= t('date_picker.no_date_assigned') %>
     - else
-      %a.button_gray.convert_to_task{:href => "#convert_to_task"}
-        %span <%= t('comments.conversations.convert_to_task') %>
+      a.button_gray.convert_to_task(href="#convert_to_task")
+        span <%= t('comments.conversations.convert_to_task') %>
 
     span.new(style= 'display: none') ← &nbsp;&nbsp; <%= t('comments.watchers.popup_note_html') %>
 
