--- a/app/styles/_layout.sass
+++ b/app/styles/_layout.sass
@@ -42,19 +42,9 @@ div.column_wrap
       max-width: $column_width - 20px
     .view_sidebar
       margin-left: 15px
-div.content_wrap
-  left: $column_width +1px
-  right: $aux_width
-  border-left: 1px solid $clr_gray_60
-  .content
-    position: absolute
-    top: 26px
-    bottom: 0
-    left: 0
-    right: 0
-    overflow-y: auto
-    //padding: 10px
-    background: url(/img_3_2/bg_activity.gif) repeat
+
+
+
 div.aux_wrap
   width: $aux_width
   right: 0
@@ -65,6 +55,30 @@ div.aux_wrap
     color: black
   .view_sidebar
     padding: 5px
+
+//Content DIV to add the form in activities to the scrolling content
+div.content_scroll
+  overflow-y: auto
+  position: absolute
+  background: url(/img_3_2/bg_activity.gif) repeat
+  top: 26px
+  left: 0
+  bottom: 0
+  right: 0
+div.content_wrap
+  left: $column_width +1px
+  right: $aux_width
+  border-left: 1px solid $clr_gray_60
+  .content
+    position: relative
+    float: left
+    clear: both
+    top: 10px
+    bottom: 0
+    left: 0
+    right: 0
+    //padding: 10px
+    //background: url(/img_3_2/bg_activity.gif) repeat
 
 // TODO: remove extra element and use +clearing
 div.clear
