Restyling submit button with medina styling
In his mockup, this was supposed to be a link a.button_blue but a lot of
backbone code depends on it being an input so I just added the clas to
the input.

TODO: It it needs further styling.

--- a/app/styles/_buttons.sass
+++ b/app/styles/_buttons.sass
@@ -114,6 +114,8 @@ a.add_button, a.new_task_list_link
     span
       background-position-y: -196px
 
+input.button_blue
+  border: none
 
 =button
   display: inline-block
