--- a/app/templates/task_lists/task_list.jade.erb
+++ b/app/templates/task_lists/task_list.jade.erb
@@ -17,7 +17,7 @@
       .extra
         a.task_list_rename(href= '#') Rename task list
         a.task_list_set_dates(href= '#') Set the start &amp; end date
-        a.task_list_resolve(href= '#', aconfirm='Are you sure you want to resolve and archive this task list?', action_url='/projects/test_project-20/task_lists/93220/archive?on_index=1') Resolve all tasks and archive
+        a.task_list_resolve(href= '#') Resolve all tasks and archive
         a.task_list_delete(href= '#', aconfirm='Are you sure you want to delete this task list?', action_url='/projects/test_project-20/task_lists/93220?on_index=1') Delete
 
     form.task_list_form(accept-charset='UTF-8', style= 'display: none;overflow-x: visible;overflow-y: visible;')
