Wrapping comment form with a .new_comment_wrap div. Updating backbone code to reflect this.

--- a/app/styles/_comments.sass
+++ b/app/styles/_comments.sass
@@ -13,7 +13,7 @@ span.comments_count
     width: 16px
     text-align: center
 
-.new_comment, form.edit_comment
+.new_comment_wrap, form.edit_comment
   margin-top: 10px
   padding-bottom: 3px
   margin-bottom: 10px
