--- a/app/templates/partials/add_watchers.jade.erb
+++ b/app/templates/partials/add_watchers.jade.erb
@@ -6,4 +6,4 @@ p <%=t('comments.watchers.explain')%>
 
 - each user in self.users
   .watcher
-    a(href= '#', data-login= user.username)= user.full_name
+    a(href= '#', data-login= user.username)= self.full_name(user)
