--- a/app/templates/task_lists/task_list.jade.erb
+++ b/app/templates/task_lists/task_list.jade.erb
@@ -15,10 +15,10 @@
 
       img.triangle(alt= 'Triangle', src='/images/triangle.png?1285939525')
       .extra
-        a.task_list_rename(href= '#') Rename task list
-        a.task_list_set_dates(href= '#') Set the start &amp; end date
-        a.task_list_resolve(href= '#') Resolve all tasks and archive
-        a.task_list_delete(href= '#', aconfirm='Are you sure you want to delete this task list?', action_url='/projects/test_project-20/task_lists/93220?on_index=1') Delete
+        a.task_list_rename(href= '#') <%= t('task_lists.actions.rename')%>
+        a.task_list_set_dates(href= '#') <%= t('task_lists.actions.set_dates')%>
+        a.task_list_resolve(href= '#') <%= t('task_lists.actions.resolve_and_archive')%>
+        a.task_list_delete(href= '#') <%= t('common.delete')%>
 
     form.task_list_form(accept-charset='UTF-8', style= 'display: none;overflow-x: visible;overflow-y: visible;')
       input(name= 'task_list[id]', type= 'hidden', value= self.task_list.id)
