Adding id to .content_header div in layout

--- a/app/views/layouts/backbone.haml
+++ b/app/views/layouts/backbone.haml
@@ -41,7 +41,7 @@
             %span#view_title
               = t("navigation.recent_activity")
           .content_scroll
-            .content_header
+            .content_header#content_header
             .content#content
         .aux_wrap
           .separator
