Using a special layout for My Settings

--- a/app/styles/_navigation.sass
+++ b/app/styles/_navigation.sass
@@ -1,4 +1,4 @@
-div.user_navigation, div.project_settings_navigation, div.project_column_navigation
+.project_settings_navigation, .project_column_navigation
   ul
     list-style-type: none
     margin: 0px
