--- a/app/styles/_sidebar.sass
+++ b/app/styles/_sidebar.sass
@@ -2,14 +2,22 @@
   padding: 0
   margin: 0
     bottom: 20px
-  .el
+  ul
+    padding: 0
+    margin: 0
+    li
+      padding-left: 0 !important
+      width: $column_width
+    a.active
+      color: white
+      background-color: $clr_gray_50
+  .el, li
     display: inline-block
     width: $column_width - 10px
     padding-left: 10px
     position: relative
     font-size: 11px
     background: url(/img_3_2/sprite_h.png) bottom left no-repeat
-    
     span
       position: absolute
       right: 5px
