--- a/app/views/shared/_user_navigation.erb
+++ b/app/views/shared/_user_navigation.erb
@@ -1,5 +1,7 @@
-<div class="user_navigation"><%  
-render_tabnav :user do 
+<div class="nav_links">
+  <div class="separator first">My settings</div>
+  <% 
+  render_tabnav :user do 
     add_tab do |t|
       t.named t('.account_settings')
       t.links_to account_settings_path
@@ -49,5 +51,6 @@ render_tabnav :user do
       t.links_to account_delete_path
       t.highlights_on :controller => 'users', :action => 'edit', :sub_action => 'delete'
     end
-end
-%><div class="clear"></div></div>
+  end
+%>
+</div>
