Set simple to true in simple conversation forms

--- a/app/templates/partials/comment_form_simple.jade.erb
+++ b/app/templates/partials/comment_form_simple.jade.erb
@@ -1,4 +1,5 @@
 input(name= 'utf8', type= 'hidden', value= '✓')
+input(type="hidden", name='simple', value='true')
 .big_avatar
   span
 .textarea_big
