--- a/app/styles/_pages.sass
+++ b/app/styles/_pages.sass
@@ -16,81 +16,9 @@
     img
       cursor: move
 
-#column_pages
-  clear: both
-  margin-top: 10px
-  h2 a
-    float: right
-  div.page
-    padding: 3px
-    font-size: 12px
-    img.drag
-      display: none
-      padding-right: 3px
-  a.new
-    color: #777
+.page_view
 
-#column_pages.reordering
-  div.page
-    img.drag
-      display: block
-      float: left
-      cursor: move
-
-.new_pages, .create_pages, .edit_pages
-  .content
-    h2, form
-      margin-left: 20px
-    input#page_name, input#page_description
-      width: 580px
-    input#page_description
-      font-size: 12px
-    .watchers
-      width: 570px
-      background-color: rgb(255, 255, 200)
-      margin: 10px
-        left: 0px
-      padding: 10px
-        top: 0px
-      border: 1px rgb(220, 220, 150) solid
-      font-size: 12px
-      h3
-        font-size: 14px
-        margin-bottom: 10px
-      .user
-        float: left
-        width: 170px
-      p
-        margin-top: 10px
-  .column
-    font-size: 12px
-    ul
-      padding-left: 15px
-    p, ul
-      margin-bottom: 10px
-
-.index_pages
-  .content
-    .page
-      padding:
-        left: 20px
-        bottom: 5px
-      border-bottom: solid 1px rgb(230, 230, 230)
-      display: block
-      h3
-        font-size: 15px
-        margin: 0px
-          top: 10px
-      a
-        text-decoration: none
-      a:hover
-        text-decoration: underline
-      p
-        margin: 5px 0px
-        font-size: 12px
-        color: rgb(100, 100, 100)
-
-.show_pages
+.page_view
   .page_header
     display: block
     margin-bottom: 10px
@@ -122,8 +50,31 @@
     padding: 6px 10px
     -moz-border-radius: 8px
     -webkit-border-radius: 8px
+  h2, form
+    margin-left: 20px
+  input#page_name, input#page_description
+    width: 580px
+  input#page_description
+    font-size: 12px
+  .watchers
+    width: 570px
+    background-color: rgb(255, 255, 200)
+    margin: 10px
+      left: 0px
+    padding: 10px
+      top: 0px
+    border: 1px rgb(220, 220, 150) solid
+    font-size: 12px
+    h3
+      font-size: 14px
+      margin-bottom: 10px
+    .user
+      float: left
+      width: 170px
+    p
+      margin-top: 10px
 
-#pageInsert
+.pageInsert
   position: relative
   margin: 0px
   p
@@ -138,10 +89,10 @@
     cursor: pointer
     margin: 0px
 
-#pageInsertItems
+.pageInsertItems
   position: relative
 
-#pageInsertItemsBar
+.pageInsertItemsBar
   left: -70px
   padding-left: 70px
   padding-top: 0px
@@ -159,23 +110,21 @@
   .buttons
     padding: 0px
 
-#pageFormContainer
+.pageFormContainer
   margin-left: 16px
 
-#pageInsertItemCancel
+.pageInsertItemCancel
   position: absolute
   left: 15px
   line-height: 28px
-
-#pageInsertItemCancel
   a
     color: red
     font-size: 80%
 
-#pageInsertItemWidgets
+.pageInsertItemWidgets
   padding-left: 11px
 
-#pageWidgetForms
+.pageWidgetForms
   display: none
 
 .page_slot
@@ -280,7 +229,7 @@ form.new_note, form.edit_note
     float: right
     font-size: 12px
 
-.show_pages
+.page_view
   .upload
     .info
       float: left
@@ -321,12 +270,6 @@ form.new_note, form.edit_note
       .date
         display: inline
 
-.index_pages
-  h4
-    :margin-top 2px
-    :margin-bottom 2px
-
-
 #content
   .page_list
     float: left
@@ -351,6 +294,7 @@ form.new_note, form.edit_note
 
   .page_view
     float: left
+    background-color: #ffffff
 
   .pages
     margin: -10px
