Fixed the "Save" button on new comment form.
It was styled as an <a>, but we switched to <input> again. And so, now i
t has fixed width: 75px, since it changes on click from "Save" to "Sendi
ng…".

--- a/app/styles/_comments.sass
+++ b/app/styles/_comments.sass
@@ -128,9 +128,6 @@ span.comments_count
         background-position-x: -62px
       a.btn_lock
         background-position-x: -93px
-
-
-
   .actions
     display: inline-block
     span
@@ -206,11 +203,19 @@ span.comments_count
       position: relative
       top: -2px
       color: #777
-  .submit
+  input.button_blue
+    width: 75px
+    background-position: -50px -112px
+    text-align: center
+    color: $clr_blue_a
+    float: right
+    display: inline-block
+    padding: 0
+  /*.submit
     float: right
     display: inline-block
     text-align: right
-    width: auto
+    width: auto*/
   .project_select
     font-size: 13px
   .extra
@@ -437,3 +442,9 @@ form .upload_area
     position: relative
     z-index: 9997
   
+.help
+  display: inline-block
+  float: right
+  clear: none
+  position: absolute
+  border: 1px solid red
