--- a/app/styles/_shared.sass
+++ b/app/styles/_shared.sass
@@ -28,7 +28,8 @@ $clr_gray_70: #707070
 $clr_gray_80: #535353
 $clr_gray_90: #313131
 $brd_gray: 1px solid $clr_gray_50
-
+//Blues
+$clr_blue_a: #476f82
 
 
 // fix for IE7, http://flipc.blogspot.com/2009/02/damn-ie7-and-inline-block.html
